Clerk auth setup

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 # .env
 VITE_GOOGLE_API_KEY=AIzaSyBo5m0O_Tkp00pb09hnek-KRWmZqSN3o_0
+
+VITE_CLERK_PUBLISHABLE_KEY=pk_test_YXNzdXJpbmctYnVsbGZyb2ctNzQuY2xlcmsuYWNjb3VudHMuZGV2JA
