--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.24.2",
     "@google/generative-ai": "^0.24.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
